[gd_scene load_steps=18 format=2]

[ext_resource path="res://recursos/Items/wing_right.png" type="Texture" id=1]
[ext_resource path="res://Juego/Skiper/Bob.gd" type="Script" id=2]
[ext_resource path="res://recursos/Players/bunny1_stand.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny1_walk2.png" type="Texture" id=4]
[ext_resource path="res://recursos/Players/bunny1_walk1.png" type="Texture" id=5]
[ext_resource path="res://recursos/Players/bunny1_jump.png" type="Texture" id=6]
[ext_resource path="res://recursos/Players/bunny1_hurt.png" type="Texture" id=7]
[ext_resource path="res://recursos/sonidos/Jump 51.wav" type="AudioStream" id=8]
[ext_resource path="res://recursos/Items/wing_left.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "salto",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "correr",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "quieto",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "caida",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 36.9736
height = 72.5824

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.5428, 3.30794 )

[sub_resource type="Animation" id=4]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("anim:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.001 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Bob" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 0.3, 0.3 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 61
script = ExtResource( 2 )
velocidad = Vector2( 225, 650 )
caida_acel = 200
fuerz_salto = 2100

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -23.6098, -95.2588 )
texture = ExtResource( 9 )
offset = Vector2( -40.3902, -15.7412 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 23.6373, -95.2588 )
texture = ExtResource( 1 )
offset = Vector2( 40.3627, -15.7412 )

[node name="anim" type="AnimatedSprite" parent="."]
position = Vector2( 0, -102.53 )
frames = SubResource( 1 )
animation = "salto"
playing = true

[node name="colisioncuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 0.0707245, -72.5804 )
shape = SubResource( 2 )

[node name="audiosalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.393

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -6.27034, -503.461 )
current = true
limit_bottom = 1000
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="piescolision" type="CollisionShape2D" parent="."]
position = Vector2( 0.624301, -4.6822 )
shape = SubResource( 3 )

[node name="enfriamiento_powerup" type="Timer" parent="."]
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aclarar = SubResource( 4 )
anims/defalut = SubResource( 5 )
anims/entrar = SubResource( 6 )
anims/oscurecer = SubResource( 7 )
anims/volar = SubResource( 8 )

[node name="efrieamiento_volar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="enfriamiento_powerup" to="." method="_on_enfriamiento_powerup_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="efrieamiento_volar" to="." method="_on_efrieamiento_volar_timeout"]
